--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,11 @@ on:
       main_py_ver:
         description: "Main python version for coverage/tmate."
         type: choice
-        default: "3.10"
+        default: "3.14"
         options:
+          - "3.14"
+          - "3.13"
+          - "3.12"
           - "3.11"
           - "3.10"
           - "3.9"
@@ -53,7 +56,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.12", "3.11", "3.10", "3.9"]
+        python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9"]
     permissions:
       contents: write
     runs-on: ${{ matrix.os }}
