--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,22 +19,24 @@ classifiers = [
 ]
 requires-python = ">=3.9.0"
 dependencies = [
-  "pre-commit >= 4.0.0",
-  "mypy >= 1.5.1",
-  "numpydoc >= 1.8.0",
-  "shellcheck-py >= 0.9.0.5",
-  "mdformat >= 0.7.17",
-  "mdformat-pyproject >= 0.0.1",
-  "mdformat-config >= 0.2.1",
-  "mdformat-rustfmt >= 0.0.3",
-  "mdformat-footnote >= 0.1.1",
-  "mdformat-frontmatter >= 2.0.1",
-  "mdformat-gfm >= 0.3.5",
-  "mdformat-tables >= 1.0.0",
-  "mdformat-web >= 0.2.0",
-  "mdformat-toc >= 0.3.0",
-  "actionlint-py >= 1.7.7.23",
-  "validate-pyproject[all] >= 0.22",
+  "pre-commit>=4.0.0",
+  "mypy>=1.5.1",
+  "numpydoc>=1.8.0",
+  "shellcheck-py>=0.9.0.5",
+  "mdformat>=0.7.17",
+  "mdformat-pyproject>=0.0.1",
+  "mdformat-ruff>=0.1.3",
+  "mdformat-beautysh>=0.1.1",
+  "mdformat-config>=0.2.1",
+  "mdformat-gofmt>=0.0.2",
+  "mdformat-rustfmt>=0.0.3",
+  "mdformat-footnote>=0.1.1",
+  "mdformat-frontmatter>=2.0.1",
+  "mdformat-gfm>=0.3.5",
+  "mdformat-tables>=1.0.0",
+  "mdformat-web>=0.2.0",
+  "mdformat-toc>=0.3.0",
+  "validate-pyproject[all]>=0.22",
 ]
 
 [project.urls]
@@ -45,83 +47,43 @@ Issue = "https://github.com/rcmdnk/pyproject-pre-commit/issues"
 
 [project.optional-dependencies]
 ruff = [
-  "ruff >= 0.7.2",
-  "mdformat-ruff >= 0.1.3",
+  "ruff>=0.7.2",
 ]
 black = [
-  "black >= 24.3.0",
-  "blacken-docs >= 1.16.0",
-  "flake8-pyproject >= 1.2.3",
-  "flake8-annotations-complexity >= 0.0.8",
-  "flake8-bugbear >= 24.0.0",
-  "flake8-builtins >= 2.1.0",
-  "flake8-comprehensions >= 3.14.0",
-  "flake8-debugger >= 4.1.2",
-  "flake8-docstrings >= 1.7.0",
-  "flake8-executable >= 2.1.3",
-  "flake8-pep3101 >= 2.0.0",
-  "flake8-print >= 5.0.0",
-  "flake8-rst-docstrings >= 0.3.0",
-  "flake8-string-format >= 0.3.0",
-  "pep8-naming >= 0.14.0",
-  "pycodestyle >= 2.11.0",
-  "autoflake >= 2.2.1",
-  "autopep8 >= 2.0.4",
-  "isort >= 5.12.0",
-  "bandit[toml] >= 1.7.5",
-]
-all = [
-  "ruff >= 0.7.2",
-  "mdformat-ruff >= 0.1.3",
-  "black >= 24.3.0",
-  "blacken-docs >= 1.16.0",
-  "flake8-pyproject >= 1.2.3",
-  "flake8-annotations-complexity >= 0.0.8",
-  "flake8-bugbear >= 24.0.0",
-  "flake8-builtins >= 2.1.0",
-  "flake8-comprehensions >= 3.14.0",
-  "flake8-debugger >= 4.1.2",
-  "flake8-docstrings >= 1.7.0",
-  "flake8-executable >= 2.1.3",
-  "flake8-pep3101 >= 2.0.0",
-  "flake8-print >= 5.0.0",
-  "flake8-rst-docstrings >= 0.3.0",
-  "flake8-string-format >= 0.3.0",
-  "pep8-naming >= 0.14.0",
-  "pycodestyle >= 2.11.0",
-  "autoflake >= 2.2.1",
-  "autopep8 >= 2.0.4",
-  "isort >= 5.12.0",
-  "bandit[toml] >= 1.7.5",
+  "black>=24.3.0",
+  "blacken-docs>=1.16.0",
+  "flake8-pyproject>=1.2.3",
+  "flake8-annotations-complexity>=0.0.8",
+  "flake8-bugbear>=24.0.0",
+  "flake8-builtins>=2.1.0",
+  "flake8-comprehensions>=3.14.0",
+  "flake8-debugger>=4.1.2",
+  "flake8-docstrings>=1.7.0",
+  "flake8-executable>=2.1.3",
+  "flake8-pep3101>=2.0.0",
+  "flake8-print>=5.0.0",
+  "flake8-rst-docstrings>=0.3.0",
+  "flake8-string-format>=0.3.0",
+  "pep8-naming>=0.14.0",
+  "pycodestyle>=2.11.0",
+  "autoflake>=2.2.1",
+  "autopep8>=2.0.4",
+  "isort>=5.12.0",
+  "bandit[toml]>=1.7.5",
 ]
 
 [dependency-groups]
 dev = [
-  "pytest >= 8.0.0",
-  "pytest-cov >= 6.0.0",
-  "pytest-xdist >= 3.3.1",
-  "ruff >= 0.7.2",
-  "mdformat-ruff >= 0.1.3",
-  "black >= 24.3.0",
-  "blacken-docs >= 1.16.0",
-  "flake8-pyproject >= 1.2.3",
-  "flake8-annotations-complexity >= 0.0.8",
-  "flake8-bugbear >= 24.0.0",
-  "flake8-builtins >= 2.1.0",
-  "flake8-comprehensions >= 3.14.0",
-  "flake8-debugger >= 4.1.2",
-  "flake8-docstrings >= 1.7.0",
-  "flake8-executable >= 2.1.3",
-  "flake8-pep3101 >= 2.0.0",
-  "flake8-print >= 5.0.0",
-  "flake8-rst-docstrings >= 0.3.0",
-  "flake8-string-format >= 0.3.0",
-  "pep8-naming >= 0.14.0",
-  "pycodestyle >= 2.11.0",
-  "autoflake >= 2.2.1",
-  "autopep8 >= 2.0.4",
-  "isort >= 5.12.0",
-  "bandit[toml] >= 1.7.5",
+  "pytest>=8.0.0",
+  "pytest-cov>=6.0.0",
+  "pytest-xdist>=3.3.1",
+  "mdformat-ruff>=0.1.3",
+]
+ruff = [
+  "pyproject-pre-commit[ruff]",
+]
+black = [
+  "pyproject-pre-commit[black]",
 ]
 
 [project.scripts]
@@ -131,6 +93,9 @@ ppc = "pyproject_pre_commit:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.uv]
+default-groups = ["dev", "ruff", "black"]
+
 [tool.pytest.ini_options]
 addopts = "-n auto"
 testpaths = ["tests",]
@@ -139,34 +104,22 @@ testpaths = ["tests",]
 line-length = 79
 
 [tool.ruff.lint]
-## select = ["ALL"]
-## select = ["E4", "E7", "E9", "F"]  # default, black compatible
-select = [  # similar options to black, flake8 + plugins, isort etc...)
-  #"E4",  # Import (comparable to black)
-  #"E7",  # Indentation (comparable to black)
-  #"E9",  # Blank line (comparable to black)
-  "F",   # String (comparable to black)
-  "I",   # Import order (comparable to isort)
-  "S",   # flake8-bandit (comparable to bandit)
-  "B",   # flake8-bugbear
-  "A",   # flake8-builtins
-  "C4",   # flake8-comprehensions
-  "T10",  # flake8-debugger
-  "EXE",  # flake8-executable
-  "T20", # flake8-print
-  "N", # pep8-naming
-  "E", # pycodestyle
-  "W", # pycodestyle
-  "C90", # mccabe
-]
+select = ["ALL"]
 
 ignore = [
- "E203", # Not PEP8 compliant and black insert space around slice: [Frequently Asked Questions - Black 22.12.0 documentation](https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated)
- "E501", # Line too long. Disable it to allow long lines of comments and print lines which black allows.
-# "E704", # NOT in ruff. multiple statements on one line (def). This is inconsistent with black >= 24.1.1 (see ttps://github.com/psf/black/pull/3796)
-# "W503", # NOT in ruff. is the counter part of W504, which follows current PEP8: [Line break occurred before a binary operator (W503)](https://www.flake8rules.com/rules/W503.html)
- "D100", "D102", "D103", "D104", "D105", "D106", # Missing docstrings other than class (D101)
- "D401", # First line should be in imperative mood
+    "E203", # Not PEP8 compliant and black insert space around slice: [Frequently Asked Questions - Black 22.12.0 documentation](https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated)
+    "E501", # Line too long. Disable it to allow long lines of comments and print lines which black allows.
+    "D100", "D102", "D103", "D104", "D105", "D106", # Missing docstrings other than class (D101)
+    "D401", # First line should be in imperative mood
+    "D211", # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`.
+    "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
+    "COM812", "D203", "ISC001", # The following rules may cause conflicts when used with the formatter: `COM812`, `D203`, `ISC001`. To avoid unexpected behavior, we recommend disabling these rules, either by removing them from the `select` or `extend-select` configuration, or adding them to the `ignore` configuration.
+    "FBT001", # Boolean-typed positional argument in function definition
+    "FBT002", # Boolean default positional argument in function definition
+    "FBT003", # Boolean positional value in function call
+    "TID252", # Prefer absolute imports over relative imports from parent modules
+    "PLC0415", # `import` should be at the top-level of a file
+    "PLR2004", # Magic value used in comparison
 ]
 
 [tool.ruff.lint.per-file-ignores]
