chore: add ty type checker to pre-commit hooks chore: add ty to pyproject.toml dependencies and optional-dependencies feat: add ty optional-dependency group chore: update uv default-groups to include ty fix: ignore unresolved import for tomllib in test_version

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -169,6 +169,14 @@ repos:
           - pyi
         require_serial: true
         pass_filenames: false
+      - id: ty
+        # https://github.com/astral-sh/ty
+        name: ty
+        entry: ty check
+        language: system
+        types_or:
+          - python
+          - pyi
       - id: numpydoc-validation
         # https://github.com/numpy/numpydoc
         name: numpydoc-validation
