--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,24 +19,24 @@ classifiers = [
 ]
 requires-python = ">=3.9.0"
 dependencies = [
-  "pre-commit>=4.0.0",
-  "mypy>=1.5.1",
-  "numpydoc>=1.8.0",
-  "shellcheck-py>=0.9.0.5",
-  "mdformat>=0.7.17",
-  "mdformat-pyproject>=0.0.1",
-  "mdformat-ruff>=0.1.3",
-  "mdformat-beautysh>=0.1.1",
-  "mdformat-config>=0.2.1",
-  "mdformat-gofmt>=0.0.2",
-  "mdformat-rustfmt>=0.0.3",
-  "mdformat-footnote>=0.1.1",
-  "mdformat-frontmatter>=2.0.1",
-  "mdformat-gfm>=0.3.5",
-  "mdformat-tables>=1.0.0",
-  "mdformat-web>=0.2.0",
-  "mdformat-toc>=0.3.0",
-  "validate-pyproject[all]>=0.22",
+    "pre-commit>=4.0.0",
+    "mypy>=1.5.1",
+    "numpydoc>=1.8.0",
+    "shellcheck-py>=0.9.0.5",
+    "mdformat>=0.7.17",
+    "mdformat-pyproject>=0.0.1",
+    "mdformat-ruff>=0.1.3",
+    "mdformat-beautysh>=0.1.1",
+    "mdformat-config>=0.2.1",
+    "mdformat-gofmt>=0.0.2",
+    "mdformat-rustfmt>=0.0.3",
+    "mdformat-footnote>=0.1.1",
+    "mdformat-frontmatter>=2.0.1",
+    "mdformat-gfm>=0.3.5",
+    "mdformat-tables>=1.0.0",
+    "mdformat-web>=0.2.0",
+    "mdformat-toc>=0.3.0",
+    "validate-pyproject[all]>=0.22",
 ]
 
 [project.urls]
@@ -47,43 +47,49 @@ Issue = "https://github.com/rcmdnk/pyproject-pre-commit/issues"
 
 [project.optional-dependencies]
 ruff = [
-  "ruff>=0.7.2",
+    "ruff>=0.7.2",
 ]
 black = [
-  "black>=24.3.0",
-  "blacken-docs>=1.16.0",
-  "flake8-pyproject>=1.2.3",
-  "flake8-annotations-complexity>=0.0.8",
-  "flake8-bugbear>=24.0.0",
-  "flake8-builtins>=2.1.0",
-  "flake8-comprehensions>=3.14.0",
-  "flake8-debugger>=4.1.2",
-  "flake8-docstrings>=1.7.0",
-  "flake8-executable>=2.1.3",
-  "flake8-pep3101>=2.0.0",
-  "flake8-print>=5.0.0",
-  "flake8-rst-docstrings>=0.3.0",
-  "flake8-string-format>=0.3.0",
-  "pep8-naming>=0.14.0",
-  "pycodestyle>=2.11.0",
-  "autoflake>=2.2.1",
-  "autopep8>=2.0.4",
-  "isort>=5.12.0",
-  "bandit[toml]>=1.7.5",
+    "black>=24.3.0",
+    "blacken-docs>=1.16.0",
+    "flake8-pyproject>=1.2.3",
+    "flake8-annotations-complexity>=0.0.8",
+    "flake8-bugbear>=24.0.0",
+    "flake8-builtins>=2.1.0",
+    "flake8-comprehensions>=3.14.0",
+    "flake8-debugger>=4.1.2",
+    "flake8-docstrings>=1.7.0",
+    "flake8-executable>=2.1.3",
+    "flake8-pep3101>=2.0.0",
+    "flake8-print>=5.0.0",
+    "flake8-rst-docstrings>=0.3.0",
+    "flake8-string-format>=0.3.0",
+    "pep8-naming>=0.14.0",
+    "pycodestyle>=2.11.0",
+    "autoflake>=2.2.1",
+    "autopep8>=2.0.4",
+    "isort>=5.12.0",
+    "bandit[toml]>=1.7.5",
+]
+ty = [
+    "ty>=0.0.7",
 ]
 
 [dependency-groups]
 dev = [
-  "pytest>=8.0.0",
-  "pytest-cov>=6.0.0",
-  "pytest-xdist>=3.3.1",
-  "mdformat-ruff>=0.1.3",
+    "pytest>=8.0.0",
+    "pytest-cov>=6.0.0",
+    "pytest-xdist>=3.3.1",
+    "mdformat-ruff>=0.1.3",
 ]
 ruff = [
-  "pyproject-pre-commit[ruff]",
+    "pyproject-pre-commit[ruff]",
 ]
 black = [
-  "pyproject-pre-commit[black]",
+    "pyproject-pre-commit[black]",
+]
+ty = [
+    "pyproject-pre-commit[ty]",
 ]
 
 [project.scripts]
@@ -94,7 +100,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.uv]
-default-groups = ["dev", "ruff", "black"]
+default-groups = ["dev", "ruff", "black", "ty"]
 
 [tool.pytest.ini_options]
 addopts = "-n auto"
